edit readme and add train.ipynb

--- a/emotion_recognition/speech-emotion-recognition.ipynb
+++ b/emotion_recognition/speech-emotion-recognition.ipynb
@@ -22,7 +22,7 @@
     "* Crowd-sourced Emotional Multimodal Actors Dataset (Crema-D)\n",
     "* Ryerson Audio-Visual Database of Emotional Speech and Song (Ravdess)\n",
     "* Surrey Audio-Visual Expressed Emotion (Savee)\n",
-    "* Toronto Emotional Speech Set (Tessa)"
+    "* Toronto Emotional Speech Set (Tess)"
    ]
   },
   {
